# rust-api-lab

./: .env  .env.example  .gitignore  Cargo.toml  README.md  architect-code.txt  docker-compose.yml  fix_errors.bat
.github/workflows/: check.yml
crates/: Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs  routes.rs  websocket.rs
crates/api/src/models/: document.rs  mod.rs
crates/api/src/services_backup/: document_service.rs  mod.rs  websocket_service.rs
crates/api/src/tests/: document_service_test.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20251102043817_init.down.sql  20251102043817_init.up.sql  20251102180000_create_documents_table.down.sql  20251102180000_create_documents_table.up.sql
crates/db/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: document.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs
migrations/migrations/: 20251102052212_create_documents.sql
scripts/: doc_create.lua  doc_query.lua  ws_sync.lua
