[package]
name    = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde     = { version = "1.0", features = ["derive"] }
dotenv    = "0.15"
env_logger= "0.10"
log       = "0.4"
db        = { path = "../db" }
sqlx      = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono    = { version = "0.4", features = ["serde"] }