[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }
dotenv = "0.15"
actix-cors = "0.7"
db = { path = "../db" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"